Add universal invoice feedback export
